// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHoverEffectsBackgroundStyles Get a correct hover effects background style 1`] = `
Object {
  "general": Object {
    "background-color": "rgb(255, 99, 71)",
  },
}
`;

exports[`getHoverEffectsBackgroundStyles Get a correct hover effects background style 2`] = `
Object {
  "general": Object {
    "background": "linear-gradient(135deg,rgba(6,147,227,1) 0%,rgba(224,82,84,1) 100%)",
  },
}
`;
